<resources>
    <string name="app_name">Talkster</string>
    <string name="appname">Talkster</string>
    <string name="logotype">Logotype</string>
    <string name="splashScreenUnderLogo">Always be in touch</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_test">test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="your_mail">Your mail</string>
    <string name="enter_code">Enter code</string>
    <string name="profile_info">Profile info</string>
    <string name="firs_name_required">First name (required)</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_talkster">Welcome to Talkster</string>
    <string name="cleared_history">History was cleared</string>
    <string name="saved_messages">Saved Messages</string>
    <string name="audio_message">Audio message</string>
    <string name="photo">Photo</string>
    <string name="message">Message</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="delete">Delete</string>
    <string name="mail_info">We’ve sent a mail with activation code to your mail \n %s</string>
    <string name="mute">Mute</string>
    <string name="audio_call">Audio Call</string>
    <string name="video_call">Video Call</string>
    <string name="clear_history">Clear history</string>
    <string name="change_theme">Change theme</string>
    <string name="delete_chat">Delete chat</string>
    <string name="back">Back</string>
    <string name="disable_sound">Disable sound</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="delete_chat_confirm">Are you sure you want to delete your chat with %s?</string>
    <string name="clear_history_confirm">Are you sure you want to clear your chat history with %s?</string>
    <string name="delete_chat_both">Also delete for %s</string>
    <string name="clear_history_both">Also clear history for %s</string>
    <string name="mute_for">Mute for...</string>
    <string name="mute_forever">Mute forever</string>
    <string name="mute_notifications_for">Mute notifications for:</string>
    <string name="confirm">Confirm</string>
    <string name="unmute">Unmute</string>
    <string name="welcome_message">Looks like you have no messages.\nAdd your friends and start your journey on Talkster.</string>
    <string name="empty_chat">No messages yet. Say hi to %1$s!</string>
    <string name="last_name_placeholder">Enter last name</string>
    <string name="offline_header">Houston, we have a problem!</string>
    <string name="offline_description">Your app is in offline mode.\nPlease check your internet connection and try again.</string>
    <string name="new_group">New group</string>
    <string name="contacts">Contacts</string>
    <string name="calls">Calls</string>
    <string name="settings">Settings</string>
    <string name="invite_friends">Invite friends</string>
    <string name="open_menu">Open</string>
    <string name="account">Account</string>
    <string name="username">Username</string>
    <string name="tap_to_change_email_address">Tap to change email address</string>
    <string name="add_few_words_about_your_self">Add few words about your self</string>
    <string name="chat_settings">Chat settings</string>
    <string name="privacy_and_security">Privacy and security</string>
    <string name="help">Help</string>
    <string name="other">Other</string>
    <string name="devices">Devices</string>
    <string name="notifications_and_sounds">Notifications and sounds</string>
    <string name="language">Language</string>
    <string name="bug_report">Bug report</string>
    <string name="talkster_faq">Talkster FAQ</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="message_text_size">Message text size</string>
    <string name="theme">Theme</string>
    <string name="switch_to_day_mode">Switch to Day mode</string>
    <string name="switch_to_night_mode">Switch to Night mode</string>
    <string name="at">\@</string>
    <string name="username_lowercase">username</string>
    <string name="username_cant_exceed_32_characters">Username can\'t exceed 32 characters.</string>
    <string name="you_can_choose_a_username_on_talkster_if_you_do_other_people_will_be_able_to_find_you_by_searching_for_your_username_you_can_also_share_your_username_with_friends_to_make_it_easier_for_them_to_find_you">You can choose a username on Talkster. If you do, other people will be able to find you by searching for your username. You can also share your username with friends to make it easier for them to find you.</string>
    <string name="username_invalid">This username is invalid.</string>
    <string name="username_checking">Checking username…</string>
    <string name="username_taken">This username is already taken.</string>
    <string name="username_available">%s is available.</string>
    <string name="biography">Biography</string>
    <string name="chat_last_seen">last seen %s</string>
    <string name="chnage_theme">Change theme</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="group_members_count">%d members</string>
    <string name="group_created_chat_message">Group created. Say hi!</string>
    <string name="map_settings">Map settings</string>
    <string name="position_tracker">Position tracker</string>
    <string name="block_user">Block user</string>
    <string name="block_user_confirm">Are you sure you want to block %s?</string>
</resources>