<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/muteItemID"
            android:title="@string/mute"
            android:visible="false">

            <menu>
                <item android:id="@+id/backItemID"
                    android:title="@string/back"/>

                <item android:id="@+id/disableSoundItemID"
                    android:title="@string/disable_sound"/>

                <item android:id="@+id/muteForItemID"
                    android:title="@string/mute_for"/>

                <item android:id="@+id/muteForeverItemID"
                    android:title="@string/mute_forever"/>

            </menu>

        </item>
        <item
            android:id="@+id/unmuteItemID"
            android:title="@string/unmute"
            android:visible="false"/>

    </group>

    <item android:id="@+id/audioCallItemID"
        android:title="@string/audio_call"
        android:icon="@drawable/mute_icon"/>

    <item android:id="@+id/videoCallItemID"
        android:title="@string/video_call"
        android:icon="@drawable/mute_icon"/>

    <item android:id="@+id/searchItemID"
        android:title="@string/search"
        android:icon="@drawable/mute_icon"/>

    <item android:id="@+id/clearHistoryItemID"
        android:title="@string/clear_history"
        android:icon="@drawable/mute_icon"/>

    <item android:id="@+id/changeThemeItemID"
        android:title="@string/change_theme"
        android:icon="@drawable/mute_icon"/>

    <item android:id="@+id/deleteChatItemID"
        android:title="@string/delete_chat"
        android:icon="@drawable/mute_icon"/>

</menu>