<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout8"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/drawable_custom_dialog_background">

    <TextView
        android:id="@+id/confirmationTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/clear_history_confirm"
        android:textColor="@color/previewMainText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/clear_history"
        android:textColor="@color/previewMainText"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/confirmCheckBox"
        style="@style/dialogCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/clear_history_both"
        app:layout_constraintStart_toStartOf="@+id/confirmationTextView"
        app:layout_constraintTop_toBottomOf="@+id/confirmationTextView" />

    <Button
        android:id="@+id/confirmButton"
        style="@style/dialogAcceptButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="@+id/cancelButton"
        app:layout_constraintEnd_toEndOf="@+id/confirmationTextView"
        app:layout_constraintTop_toTopOf="@+id/cancelButton" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/dialogCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/confirmButton"
        app:layout_constraintTop_toBottomOf="@+id/confirmCheckBox" />

</androidx.constraintlayout.widget.ConstraintLayout>